--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -229,8 +229,8 @@
       </div>
 
       <div class="post__image">
-        <img src="data:image/png;base64, {{this.img}}">
-        {{!-- <img src="data:{{this}}/{{this.img.contentType}};base64,{{this.img.data.toString}}('base64')%>"> --}}
+        {{!-- <img src="data:image/png;base64, {{this.img}}"> --}}
+        <img src="data:;base64, {{this.img.data}}">
       </div>
 
       <div class="post__options">
