--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,4 +1,4 @@
-<html>
+ <html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -20,7 +20,7 @@
             Acebook
           <h1/>
         <a/>
-        <form action="/profiles/" method="POST">
+        <form action="/profiles/find" method="POST">
           <input id="search" name="searchBar" value="" class="search-bar" type="text" placeholder="Search for friends"/>
           <button type="submit" class="magnifying-glass"><img src="/images/magnifying-glass.png" width="24" height="24" alt="magnifying-glass"/></button>
         </form>
