--- a/views/comments/index.hbs
+++ b/views/comments/index.hbs
@@ -1,33 +1,36 @@
-<h1>Comments</h1>
+<div class="comments-feed-container">
+  <h1>Commentssss?</h1>
 
-<div class = "comments">
-  {{#each comments}}
-<ul>
-  <li>{{this.message}}</li>
-  <li>{{this.user_id.username}}</li>
-  <li>{{this.time_posted}}</li>
-  
-  <div class = "likes-container">
-    <div class="post-like-counter" id="counter-{{this._id}}">{{this.likes.length}}</div>
-    <button class="like-button" id="button-{{this._id}}">
-      <img src="/images/thumbs-up.png" width="20" height="20" alt="thumbs-up-button" />
-    </button>
+  {{postId}}
 
-    <script type="text/javascript">
-      document.getElementById("button-{{this._id}}").addEventListener('click', () => {
-      fetch( "/likes/new/" + "{{this._id}}", {method: 'PUT'})
-        .then(response => response.json())
-        .then(result => document.getElementById("counter-{{this._id}}").textContent = result.counter) })
-    </script>
+  <div class="comments">
+    {{#each comments}}
+    <ul>
+      <li>{{this.message}}</li>
+      <li>{{this.user_id.username}}</li>
+      <li>{{this.time_posted}}</li>
 
-    <form id="new-comment-form" action="/comments/{{this._id}}", method="POST">
-    <input id="message" type="text" name="message" value="" placeholder="e.g. Hello!">
-    <input id="submit-comment" type="submit" value="Submit">
-    </form>
-    
+      <div class="likes-container">
+        <div class="comments-like-counter" id="counter-{{this._id}}">{{this.likes.length}}</div>
+        <button class="like-button" id="button-{{this._id}}">
+          <img src="/images/thumbs-up.png" width="20" height="20" alt="thumbs-up-button" />
+        </button>
+
+        <script type="text/javascript">
+          document.getElementById("button-{{this._id}}").addEventListener('click', () => {
+            fetch("/likes/new/" + "{{this._id}}", { method: 'PUT' })
+              .then(response => response.json())
+              .then(result => document.getElementById("counter-{{this._id}}").textContent = result.counter)
+          })
+        </script>
+      </div>
+    </div>
+    </ul>
+  {{/each}}
   </div>
-</ul>
-</div> 
-{{/each}}
 
+    <form id="new-comment-form" action="/comments/" + "{{postId}}" , method="POST">
+      <input id="message" type="text" name="message" value="" placeholder="e.g. Hello!">
+      <input id="submit-comment" type="submit" value="Submit">
+    </form>
 </div>
