resizes image and correctly displays when no image

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -229,8 +229,7 @@
       </div>
 
       <div class="post__image">
-        {{!-- <img src="data:image/png;base64, {{this.img}}"> --}}
-        <img src="data:;base64, {{this.img.data}}">
+        <img src="data:;base64, {{this.img.data}}" alt="">
       </div>
 
       <div class="post__options">
