--- a/views/profiles/index.hbs
+++ b/views/profiles/index.hbs
@@ -1,6 +1,6 @@
 <div class="profile-container">
   <h1 id="profile-header">{{profileUsername}}'s profile <br> <br> 
-    <div class="full-name" id="full-name"> {{profileFirstname}} {{profileLastname}} </div>
+    <div class="full-name-card" id="full-name"> {{profileFirstname}} {{profileLastname}} </div>
 </h1>
 
 
