--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -26,13 +26,15 @@
               class="post-like-counter"
               id="counter-{{this._id}}"
             >{{this.likes.length}}</div>
-            <button class="like-button" id="button-{{this._id}}">
-              <img
+            <button class="like-button liked-{{this._doc.likedByCurrentUser}}" id="button-{{this._id}}">
+              {{!-- <img
                 src="/images/thumbs-up.png"
+                onMouseOver="this.src='/images/thumbs-up-blue.png';" 
+                onmouseout="this.src='/images/thumbs-up.png';"
                 width="20"
                 height="20"
                 alt="thumbs-up-button"
-              />
+              /> --}}
             </button>
 
             <script type="text/javascript">
