--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,4 @@
-
-
-*{
+* {
   margin: 0;
   padding: 0;
 }
@@ -14,7 +12,8 @@ body {
 a {
   color: #00B7FF;
 }
-.homepage-outermost{
+
+.homepage-outermost {
 
   width: 100%;
   height: 730px;
@@ -23,7 +22,7 @@ a {
   align-items: center;
 }
 
-.homepage-outer{
+.homepage-outer {
 
   width: 75%;
   height: 500px;
@@ -31,7 +30,8 @@ a {
   display: flex;
   justify-content: space-evenly;
 }
-.homepage-container-left{
+
+.homepage-container-left {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 500;
   font-size: 30px;
@@ -40,26 +40,26 @@ a {
   justify-content: center;
 }
 
-.homepage-container-left img{
+.homepage-container-left img {
   width: 350px;
 }
 
-.post_logo{
+.post_logo {
   width: 150px;
 }
 
-.homepage-container-left p{
+.homepage-container-left p {
   padding-left: 40px;
 }
 
-.container{
+.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
 }
 
-.container form{
+.container form {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -70,10 +70,10 @@ a {
   border-radius: 5px;
   width: 370px;
   box-shadow: 0 2px 4px rgb(0 0 0 / 10%),
-  0 8px 16px rgb(0 0 0 / 10%);
+    0 8px 16px rgb(0 0 0 / 10%);
 }
 
-.container form input{
+.container form input {
   font-size: 16px;
   height: 48px;
   border-radius: 10px;
@@ -81,9 +81,10 @@ a {
   margin: 5px 0px;
   width: 100%;
 }
-#login_submit_btn{
+
+#login_submit_btn {
   background-color: #1877f2;
-  font-size:  20px;
+  font-size: 20px;
   color: white;
   font-weight: 700;
   padding: 0px;
@@ -91,15 +92,16 @@ a {
   cursor: pointer;
 }
 
-#forgot_pass{
-  color: #1877f2  ;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-  text-decoration: none;
+#forgot_pass {
+  color: #1877f2;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif text-decoration: none;
   padding-top: 10px;
 }
-.forgotten{
+
+.forgotten {
   width: 100%;
 }
+
 /* hr{
   margin: 15px 0px;
   width: 100%;
@@ -107,13 +109,13 @@ a {
   border-top: 1px solid rgb(210, 207, 207);
 } */
 
-#register_acc{
+#register_acc {
   cursor: pointer;
   background-color: #42b72a;
   font-size: 17px;
   color: white;
   font-weight: 800;
-  padding:  15px 0px;
+  padding: 15px 0px;
   border: none;
   border-radius: 5px;
   width: 200px;
@@ -121,9 +123,9 @@ a {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-#submit{
+#submit {
   background-color: #1877f2;
-  font-size:  20px;
+  font-size: 20px;
   color: white;
   font-weight: 700;
   padding: 0px;
@@ -131,21 +133,21 @@ a {
   cursor: pointer;
 }
 
-#logout_post{
+#logout_post {
   background-color: #1877f2;
-  font-size:  20px;
+  font-size: 20px;
   color: white;
   font-weight: 700;
   padding: 0px;
   width: 5%;
   height: 40px;
-  position:absolute;
+  position: absolute;
   top: 30px;
   right: 40px;
 }
 
-.logout a{
-  position:absolute;
+.logout a {
+  position: absolute;
   top: 90px;
   right: 15px;
   width: 5%;
@@ -157,7 +159,7 @@ a {
   border: none;
 }
 
-#message{
+#message {
   height: 50px;
 }
 
@@ -169,8 +171,9 @@ a {
   box-shadow: 0px 5px 7px -7px rgb(0 0 0 / 75%);
 
 }
-.container_post{
-  overflow:auto;
+
+.container_post {
+  overflow: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -181,11 +184,11 @@ a {
   border-radius: 5px;
   width: 600px;
   box-shadow: 0 2px 4px rgb(0 0 0 / 10%),
-  0 8px 16px rgb(0 0 0 / 10%);
+    0 8px 16px rgb(0 0 0 / 10%);
 }
 
-.container_post{
-  overflow:auto;
+.container_post {
+  overflow: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -196,22 +199,22 @@ a {
   border-radius: 5px;
   width: 600px;
   box-shadow: 0 2px 4px rgb(0 0 0 / 10%),
-  0 8px 16px rgb(0 0 0 / 10%);
+    0 8px 16px rgb(0 0 0 / 10%);
 }
 
-li{
+li {
   background-color: var(--color-canvas-default);
-  border-color:var(--color-border-default);
+  border-color: var(--color-border-default);
   border-style: ridge;
   border-width: 3px;
   border-radius: 5px;
   margin: 10px;
   width: auto;
-  height:50px;
+  height: 50px;
 }
 
 
- #welcome{
+#welcome {
   padding-left: 35px;
 }
 
@@ -478,7 +481,7 @@ body {
 }
 
 .post__image img {
-  width: 100%;
+  width: 50%;
 }
 
 .post__top {
@@ -586,4 +589,3 @@ body {
     padding: 10px 50px;
   }
 }
-
