--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,6 +27,7 @@
      </div>
 
       <div class="navbar-button-container">
+        {{#if loggedIn}}
         <div class="profile-button">
             <form  class="margin-remover" action="/profiles/:username" method="GET">
               <input class="profile-button-input" type="submit" value="Profile">
@@ -38,6 +39,7 @@
             <input class="logout-button-input" type="submit" value="Log Out">
           </form>
         </div>
+        {{/if}}
       </div>
 
     </div>
