--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,6 +15,9 @@ a {
   background-color: #007dfa;
   height: 12rem;
   padding: 0 2rem;
+  position: fixed;
+  top: 0;
+  width: -webkit-fill-available;
 }
 
 .navbar-button-container {
