Comment page backend, frontend and styling (no testing)

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -21,12 +21,12 @@
           </ul>
         </div>
 
-          <div class="likes-container">
+          <div class="post-likes-container">
             <div
               class="post-like-counter"
               id="counter-{{this._id}}"
             >{{this.likes.length}}</div>
-            <button class="like-button liked-{{this._doc.likedByCurrentUser}}" id="button-{{this._id}}">
+            <button class="post-like-button liked-{{this._doc.likedByCurrentUser}}" id="button-{{this._id}}">
             </button>
 
             <script type="text/javascript">
