--- a/views/comments/index.hbs
+++ b/views/comments/index.hbs
@@ -1,35 +1,59 @@
-<div class="comments-feed-container">
-  <h1>Comments</h1>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>{{title}}</title>
+  <link rel="stylesheet" href="/stylesheets/style.css" />
+</head>
+<body>
 
-  <div class="comments">
-    {{post.message}}
-    {{#each comments}}
-    <ul>
-      <li>{{this.message}}</li>
-      <li>{{this.user_id.username}}</li>
-      <li>{{this.time_posted}}</li>
+  <div class="comments-feed-container">
+    <a class="return-to-timeline" href="/posts">Return to timeline</a>
 
-      <div class="likes-container">
-        <div class="comments-like-counter" id="counter-{{this._id}}">{{this.likes.length}}</div>
-        <button class="like-button" id="button-{{this._id}}">
-          <img src="/images/thumbs-up.png" width="20" height="20" alt="thumbs-up-button" />
-        </button>
+    <h1>{{post.user_id.first_name}}'s post</h1>
 
-        <script type="text/javascript">
-          document.getElementById("button-{{this._id}}").addEventListener('click', () => {
-            fetch("/likes/new/" + "{{this._id}}", { method: 'PUT' })
-              .then(response => response.json())
-              .then(result => document.getElementById("counter-{{this._id}}").textContent = result.counter)
-          })
-        </script>
-      </div>
+    <div class="post-parent">
+      <ul class="post-parent-content">
+        <li class="username">@{{post.user_id.username}}</li>
+        <li class="message">{{post.message}}</li>
+        <li class="time">{{post.time_posted}}</li>
+      </ul>
     </div>
-    </ul>
-  {{/each}}
-  </div>
 
-    <form id="new-comment-form" action="/comments/{{post._id}}" , method="POST">
-      <input id="message" type="text" name="message" value="" placeholder="e.g. Hello!">
-      <input id="submit-comment" type="submit" value="Submit">
-    </form>
-</div>
+    <div class="comments">
+      {{#each comments}}
+      <div class="comment">
+        <div class="comment-div-container" id="comment-div-container-{{this._id}}">
+          <ul>
+            <li class="username">@{{this.user_id.username}}</li>
+            <li class="message">{{this.message}}</li>
+            <li class="time">{{this.time_posted}}</li>
+          </ul>
+        </div>
+
+          <div class="comment-likes-container">
+            <div
+              class="comment-like-counter"
+              id="counter-{{this._id}}"
+            >{{this.likes.length}}</div>
+            <button class="comment-like-button liked-{{this._doc.likedByCurrentUser}}" id="button-{{this._id}}">
+            </button>
+
+            <script type="text/javascript">
+              document.getElementById("button-{{this._id}}").addEventListener('click',
+              () => { fetch( "/likes/new/" + "{{this._id}}", {method: 'PUT'})
+              .then(response => response.json()) .then(result =>
+              document.getElementById("counter-{{this._id}}").textContent =
+              result.counter) })
+            </script>
+          </div>
+      </div>
+      {{/each}}
+
+      <form id="new-comment-form" action="/comments/{{post._id}}" , method="POST">
+        <textarea id="form-comment" type="text" name="message" value="" placeholder="e.g. Hello!"></textarea>
+        <br><input id="submit-comment" type="submit" value="Submit comment">
+      </form>
+    </div>
+  </div>
+  <script src="/javascripts/posts/index.js"></script>
+</body>
