--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -485,8 +485,18 @@ body {
   display: flex;
   align-items: center;
   border-bottom: 1px solid #eff2f5;
-  padding: 15px;
+  padding: 10px;
+  
 }
+
+.messageSender__top_bottom {
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid #eff2f5;
+  padding: 15px;
+  
+}
+
 
 .messageSender__top form {
   flex: 1;
@@ -525,6 +535,14 @@ body {
   cursor: pointer;
   background-color: #eff2f5;
   border-radius: 20px;
+}
+
+.messageSender__top_comment > p {
+  padding-top: 20px;
+  border-bottom: 1px solid #eff2f5;
+  padding-bottom: 20px;
+  padding-left: 10px;
+
 }
 
 /* post */
@@ -582,7 +600,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 5px;
+  padding: 1px;
+  padding-right: 20px;
+  padding-top: 50px;
   flex: 1;
 }
 
@@ -590,9 +610,25 @@ body {
   margin-left: 10px;
 }
 
-.post__option:hover {
+/* .post__option:hover {
   background-color: #eff2f5;
   border-radius: 10px;
+} */
+
+.comment__bottom {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  border-bottom: 1px solid lightgray;
+  padding-top: 20px;
+  padding-bottom: 50px;
+  padding-left: 10px;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  text-decoration: underline;
+  color: #00B7FF;
+  
+  
 }
 
 @media (max-width: 768px) {
