--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -21,8 +21,10 @@
 
     </div>
     <span class="material-icons">
-      <form action='/sessions?_method=DELETE' method='POST'>
-        <button id="logout" type="submit"><span class="material-icons">logout</span></button>
+      <form action="/sessions?_method=DELETE" method="POST">
+        <button id="logout" type="submit"><span
+            class="material-icons"
+          >logout</span></button>
       </form>
     </span>
   </div>
@@ -51,73 +53,129 @@
   <div class="feed">
     <div class="storyReel">
       <!-- story starts -->
-      <div style="
+      <div
+        style="
               background-image: url('images/img/Curtis.jpeg');
-            " class="story">
-        <img class="user__avatar story__avatar" src="images/img/Curtis.jpeg" alt="" />
+            "
+        class="story"
+      >
+        <img
+          class="user__avatar story__avatar"
+          src="images/img/Curtis.jpeg"
+          alt=""
+        />
         <h4>The Axylotls</h4>
       </div>
       <!-- story ends -->
 
       <!-- story starts -->
-      <div style="
+      <div
+        style="
               background-image: url('images/img/Stephen.png');
-            " class="story">
-        <img class="user__avatar story__avatar" src="images/img/Stephen.png" alt="" />
+            "
+        class="story"
+      >
+        <img
+          class="user__avatar story__avatar"
+          src="images/img/Stephen.png"
+          alt=""
+        />
         <h4>The Axylotls</h4>
       </div>
       <!-- story ends -->
 
       <!-- story starts -->
-      <div style="
+      <div
+        style="
               background-image: url('images/img/Nesho.jpg');
-            " class="story">
-        <img class="user__avatar story__avatar" src="images/img/Nesho.jpg" alt="" />
+            "
+        class="story"
+      >
+        <img
+          class="user__avatar story__avatar"
+          src="images/img/Nesho.jpg"
+          alt=""
+        />
         <h4>The Axylotls</h4>
       </div>
       <!-- story ends -->
 
       <!-- story starts -->
-      <div style="
+      <div
+        style="
               background-image: url('images/img/Sophia.jpeg');
-            " class="story">
-        <img class="user__avatar story__avatar" src="images/img/Sophia.jpeg" alt="" />
+            "
+        class="story"
+      >
+        <img
+          class="user__avatar story__avatar"
+          src="images/img/Sophia.jpeg"
+          alt=""
+        />
         <h4>The Axylotls</h4>
       </div>
       <!-- story ends -->
 
       <!-- story starts -->
-      <div style="
+      <div
+        style="
               background-image: url('images/img/Ladan.jpeg');
-            " class="story">
-        <img class="user__avatar story__avatar" src="images/img/Ladan.jpeg" alt="" />
+            "
+        class="story"
+      >
+        <img
+          class="user__avatar story__avatar"
+          src="images/img/Ladan.jpeg"
+          alt=""
+        />
         <h4>The Axylotls</h4>
       </div>
       <!-- story ends -->
 
       <!-- story starts -->
-      <div style="
+      <div
+        style="
               background-image: url('images/img/Brijesh.jpeg');
-            " class="story">
-        <img class="user__avatar story__avatar" src="images/img/Brijesh.jpeg" alt="" />
+            "
+        class="story"
+      >
+        <img
+          class="user__avatar story__avatar"
+          src="images/img/Brijesh.jpeg"
+          alt=""
+        />
         <h4>The Axylotls</h4>
       </div>
       <!-- story ends -->
 
       <!-- story starts -->
-      <div style="
+      <div
+        style="
               background-image: url('images/img/Evelina.jpeg');
-            " class="story">
-        <img class="user__avatar story__avatar" src="images/img/Evelina.jpeg" alt="" />
+            "
+        class="story"
+      >
+        <img
+          class="user__avatar story__avatar"
+          src="images/img/Evelina.jpeg"
+          alt=""
+        />
         <h4>The Axylotls</h4>
       </div>
       <!-- story ends -->
 
       <!-- story starts -->
-      <div style="
+      <div
+        style="
               background-image: url('images/img/Allen.jpeg');
-            " class="story">
-        <img class="user__avatar story__avatar" src="images/img/Allen.jpeg" alt="" />
+            "
+        class="story"
+      >
+        <img
+          class="user__avatar story__avatar"
+          src="images/img/Allen.jpeg"
+          alt=""
+        />
         <h4>The Axylotls</h4>
       </div>
       <!-- story ends -->
@@ -129,9 +187,15 @@
         <img class="user__avatar" src="images/img/Makers.png" alt="" />
 
         <form id="new-post-form" action="/posts" method="post">
-          {{!-- <label for="message">Whats on your mind? </label> --}}
-          <input id="message" type="text" name="message" value="" placeholder=" Whats on your mind?  {{blank}}">
-          <input id="submit" type="submit" value="POST">
+          {{! <label for="message">Whats on your mind? </label> }}
+          <input
+            id="message"
+            type="text"
+            name="message"
+            value=""
+            placeholder=" Whats on your mind?  {{blank}}"
+          />
+          <input id="submit" type="submit" value="POST" />
 
           {{!-- <div id="blank-message!">{{blank}}</div> --}}
         </form>
@@ -141,51 +205,82 @@
 
     <!-- post starts -->
     {{#each posts}}
-    <div class="post">
-      <div class="post__top">
-        <img class="user__avatar post__avatar" src="images/img/Makers.png" alt="" />
-        <div class="post__topInfo">
-          <a id="post_name" href="/profile"><h3>{{this.user.firstName}}</h3></a> <!-- Need to link post to user firstname  -->
-          <p>{{this.createdAt}}</p>
-        </div>
-      </div>
-
-      <div class="post__bottom">
-        <p>{{this.message}}</p>
-      </div>
-
-      <div class="post__image">
-        {{!-- <img src={{}} alt="" /> --}}
-      </div>
-
-      <div class="post__options">
-        <div class="post__option">
-          <p id="like{{this._id}}">{{this.likes.length}}</p>
-          <button id="button{{this._id}}" class="like" type="submit" value="{{this._id}}"
-            style="color:{{this._doc.color}}">
-            <span class="material-icons">thumb_up </span>
-          </button>
+      <div class="post">
+        <div class="post__top">
+          <img
+            class="user__avatar post__avatar"
+            src="images/img/Makers.png"
+            alt=""
+          />
+          <div class="post__topInfo">
+            <a id="post_name" href="/profile"><h3
+              >{{this.user.firstName}}</h3></a>
+            <!-- Need to link post to user firstname  -->
+            <p>{{this.createdAt}}</p>
+          </div>
         </div>
 
-        <div class="post__option">
-          <span class="material-icons"> chat_bubble_outline </span>
-          <p>Comment</p>
+        <div class="post__bottom">
+          <p>{{this.message}}</p>
         </div>
 
-        {{#each this.comments}}
-          <div class="comment__bottom">{{this.comment}} - {{this.postedBy.firstName}} {{this.postedBy.lastName}}</div>
-          <p>{{this.date}}</p>
-        {{/each}}
-          
-        <form class="new-comment-form" action="/comments" method="post">
-          <input type="hidden" id="postID" name="postID" value={{this._id}}>
-          <input class="comment" type="text" name="comment" value="" placeholder="Comment here">
-          <input class="submit-comment" type="submit" value="COMMENT">
-        </form>
+        <div class="post__image">
+          {{!-- <img src={{}} alt="" /> --}}
+        </div>
+
+        <div class="post__options">
+          <div class="post__option">
+            <p id="like{{this._id}}">{{this.likes.length}}</p>
+            <button
+              id="button{{this._id}}"
+              class="like"
+              type="submit"
+              value="{{this._id}}"
+              style="color:{{this._doc.color}}"
+            >
+              <span class="material-icons">thumb_up </span>
+            </button>
+          </div>
+          <div class="messageSender">
+            <div class="messageSender__top">
+              <img class="user__avatar" src="images/img/Makers.png" alt="" />
+
+              <form id="new-comment-form" action="/comments" method="post">
+                {{! <label for="message">Whats on your mind? </label> }}
+                <input
+                  type="hidden"
+                  id="postID"
+                  name="postID"
+                  value={{this._id}}
+                />
+                <input
+                  class="comment"
+                  type="text"
+                  name="comment"
+                  value=""
+                  placeholder=" Leave a comment."
+                />
+                <input id="submit" type="submit" value="COMMENT" />
+              </form>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="messageSender__top_comment">
+          {{#each this.comments}}
+            <div class="comment__bottom">{{this.postedBy.firstName}}
+              {{this.postedBy.lastName}}
+              
+
+            </div>
+            <p>{{this.comment}}</p>
+          {{/each}}
+        </div>
+
       </div>
-    </div>
+
     {{/each}}
-
 
     <!-- post ends -->
   </div>
