first test of image size passing

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -156,7 +156,7 @@
       </div>
 
       <div class="post__image">
-        <img src="data:;base64, {{this.img.data}}" alt="">
+        <img data-test="image" src="data:;base64, {{this.img.data}}" alt="">
       </div>
 
       <div class="post__options">
