--- a/views/profile/index.hbs
+++ b/views/profile/index.hbs
@@ -29,7 +29,7 @@
 
 <div class="post">
   <div class="profile_img">
-  <img id="profile_pic" src="{{{url}}}" width="300" height="300" />
+  <img id="profile_pic" src="data:;base64, {{profilePic.data}}" alt=""/>
   </div>
   <div class="post__bottom">
   <ul>
