--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -28,7 +28,7 @@
 
       <div class="navbar-button-container">
         <div class="profile-button">
-            <form  class="margin-remover" action="/profiles/:username" method="GET">
+            <form  class="margin-remover" action="/profiles/" method="GET">
               <input class="profile-button-input" type="submit" value="Profile">
             </form>
         </div>
