Added profile picture to the nav bar and the sidebar

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -16,7 +16,7 @@
   </div>
   <div class="header__right">
     <div class="header__info">
-      <img class="user__avatar" src="images/img/Makers.png" alt="" />
+      <img class="user__avatar" src="data:;base64, {{profilePic.data}}" alt="" />
       <h4><a href="/profile">Welcome {{firstName}}</a></h4>
 
     </div>
@@ -34,7 +34,7 @@
   <!-- sidebar starts -->
   <div class="sidebar">
     <div class="sidebarRow">
-      <img class="user__avatar" src="images/img/Makers.png" alt="" />
+      <img class="user__avatar" src="data:;base64, {{profilePic.data}}" alt="" />
       <h4><a href="/profile">Welcome {{firstName}}</a></h4>
 
     </div>
