--- a/views/profile/index.hbs
+++ b/views/profile/index.hbs
@@ -15,7 +15,7 @@
   </div>
   <div class="header__right">
     <div class="header__info">
-      <img class="user__avatar" src="images/img/Makers.png" alt="" />
+      <img class="user__avatar" src="data:;base64, {{profilePic.data}}" alt="" />
       <h4><a href="/profile">Welcome {{firstName}}</a></h4>
     </div>
 
