navbar profile button now redirects to current user's page

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -29,7 +29,7 @@
       <div class="navbar-button-container">
         {{#if loggedIn}}
         <div class="profile-button">
-            <form  class="margin-remover" action="/profiles/" method="GET">
+            <form  class="margin-remover" action="/profiles" method="GET">
               <input class="profile-button-input" type="submit" value="Profile">
             </form>
         </div>
