Added some axylotyl colouring and removed sidebar

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,7 +1,7 @@
 <!-- header starts -->
 <div class="header">
   <div class="header__left">
-    <img src="images/acebook_logo.svg" alt="" />
+   <a href="/posts"> <img src="images/acebook_logo.svg" alt="" /> </a>
     <div class="header__input">
       <span class="material-icons"> search </span>
       <input type="text" placeholder="Search Acebook" />
@@ -33,7 +33,7 @@
 <div class="main__body">
   <!-- sidebar starts -->
   <div class="sidebar">
-    <div class="sidebarRow">
+    {{!-- <div class="sidebarRow">
       <img class="user__avatar" src="data:;base64, {{profilePic.data}}" alt="" />
       <h4><a href="/profile">Welcome {{firstName}}</a></h4>
 
@@ -42,7 +42,7 @@
     <div class="sidebarRow">
       <span class="material-icons"> people </span>
       <h4>People</h4>
-    </div>
+    </div> --}}
 
   </div>
   <!-- sidebar ends -->
