--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 a {
-  color: #00B7FF;
+  color: #94be6d;
 }
 
 .homepage-outermost {
@@ -141,7 +141,7 @@ a {
 }
 
 #login_submit_btn {
-  background-color: #1877f2;
+  background-color: #5B8930;
   font-size: 20px;
   color: white;
   font-weight: 700;
@@ -151,7 +151,7 @@ a {
 }
 
 #forgot_pass {
-  color: #1877f2;
+  color: #5B8930;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-decoration: none;
   padding-top: 10px;
@@ -183,7 +183,7 @@ a {
 }
 
 #submit {
-  background-color: #1877f2;
+  background-color: #5B8930;
   font-size: 20px;
   color: white;
   font-weight: 700;
@@ -193,7 +193,7 @@ a {
 }
 
 #logout_post {
-  background-color: #1877f2;
+  background-color: #5B8930;
   font-size: 20px;
   color: white;
   font-weight: 700;
@@ -341,7 +341,7 @@ li {
 }
 
 .header__option:hover .material-icons {
-  color: #2e81f4;
+  color: #5B8930;
 }
 
 .header__option {
@@ -352,11 +352,11 @@ li {
 }
 
 .header__option.active .material-icons {
-  color: #2e81f4;
+  color: #5B8930;
 }
 
 .header__option.active {
-  border-bottom: 4px solid #2e81f4;
+  border-bottom: 4px solid #5B8930;
 }
 
 .header__option:hover {
