--- a/views/profile/index.hbs
+++ b/views/profile/index.hbs
@@ -1,7 +1,7 @@
 <!-- header starts -->
 <div class="header">
   <div class="header__left">
-    <img src="images/acebook_logo.svg" alt="" />
+    <a href="/posts"><img src="images/acebook_logo.svg" alt="" /></a>
     <div class="header__input">
       <span class="material-icons"> search </span>
       <input type="text" placeholder="Search Acebook" />
