--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -537,12 +537,16 @@ body {
   border-radius: 20px;
 }
 
+.messageSender__top_comment {
+  
+}
+
 .messageSender__top_comment > p {
   padding-top: 20px;
   border-bottom: 1px solid #eff2f5;
   padding-bottom: 20px;
   padding-left: 10px;
-
+  
 }
 
 /* post */
@@ -621,14 +625,26 @@ body {
   align-items: flex-start;
   border-bottom: 1px solid lightgray;
   padding-top: 20px;
-  padding-bottom: 50px;
   padding-left: 10px;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: 600;
-  text-decoration: underline;
+  
   color: #00B7FF;
-  
-  
+}
+
+.comment__bottom > h4 {
+  font-size: small;
+  text-decoration: underline;
+}
+
+.comment__bottom > p {
+  font-size: small;
+  color: gray;
+  text-decoration: none;
+}
+
+.hide {
+  display: none;
 }
 
 @media (max-width: 768px) {
