--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -241,6 +241,9 @@
               <span class="material-icons">thumb_up </span>
             </button>
           </div>
+
+          {{!-- Comments section starts here --}}
+
           <div class="messageSender">
             <div class="messageSender__top">
               <img class="user__avatar" src="images/img/Makers.png" alt="" />
@@ -261,24 +264,29 @@
                   placeholder=" Leave a comment."
                 />
                 <input id="submit" type="submit" value="COMMENT" />
+
               </form>
 
             </div>
           </div>
+          <button class="hide_show" type="submit">SHOW</button>
         </div>
 
-        <div class="messageSender__top_comment">
-          {{#each this.comments}}
-            <div class="comment__bottom">{{this.postedBy.firstName}}
-              {{this.postedBy.lastName}}
-              
-
+        {{#each this.comments}}
+          <div
+            class="messageSender__top_comment"
+            id="messageSender__top_comment"
+          >
+            <div class="comment__bottom">
+              <h4>{{this.postedBy.firstName}} {{this.postedBy.lastName}}</h4>
+              <p>{{this.date}}</p>
             </div>
             <p>{{this.comment}}</p>
-          {{/each}}
-        </div>
-
+          </div>
+        {{/each}}
       </div>
+
+      {{!-- Comments section ends here --}}
 
     {{/each}}
 
