toggle colour of like button

--- a/views/comments/index.hbs
+++ b/views/comments/index.hbs
@@ -35,7 +35,8 @@
               class="comment-like-counter"
               id="counter-{{this._id}}"
             >{{this.likes.length}}</div>
-            <button class="comment-like-button liked-{{this._doc.likedByCurrentUser}}" id="button-{{this._id}}">
+            <button class="comment-like-button liked-{{this._doc.likedByCurrentUser}}"
+            id="button-{{this._id}}">
             </button>
 
             <script type="text/javascript">
