--- a/views/comments/index.hbs
+++ b/views/comments/index.hbs
@@ -35,16 +35,12 @@
               class="comment-like-counter"
               id="counter-{{this._id}}"
             >{{this.likes.length}}</div>
-            <button class="comment-like-button liked-{{this._doc.likedByCurrentUser}}" id="button-{{this._id}}">
+            <button class="comment-like-button liked-{{this._doc.likedByCurrentUser}}" id="button-{{this._id}}"
+            onclick="likeCommentOnClick('{{this._id}}')" 
+            
+            >
             </button>
 
-            <script type="text/javascript">
-              document.getElementById("button-{{this._id}}").addEventListener('click',
-              () => { fetch( "/likes/new/" + "{{this._id}}", {method: 'PUT'})
-              .then(response => response.json()) .then(result =>
-              document.getElementById("counter-{{this._id}}").textContent =
-              result.counter) })
-            </script>
           </div>
       </div>
       {{/each}}
@@ -55,5 +51,6 @@
       </form>
     </div>
   </div>
-  <script src="/javascripts/posts/index.js"></script>
+  <script src="/javascripts/comments/index.js"></script>
+  
 </body>
