--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -36,7 +36,12 @@
               document.getElementById("counter-{{this._id}}").textContent =
               result.counter) })
             </script>
-          
+
+            <div class="comment-counter">
+              {{this.comments_counter}}
+              <img id="comment_image" src="/images/comment-bubble.png">
+            </div>
+
             <a class="new-comment-link" href="/comments/{{this._id}}">Write a comment</a>
           </div>
 
