--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -56,5 +56,5 @@
 
     <input id="signup" type="submit" value="Sign up" />
   </form>
-  <script src="/javascripts/users/new.js"></script>
+  {{! <script src="/javascripts/users/new.js"></script> }}
 </div>
