--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
+     <script src="/javascripts/index.js" defer></script>
   </head>
 
   <body>
