--- a/views/profiles/index.hbs
+++ b/views/profiles/index.hbs
@@ -11,10 +11,7 @@
   {{! when styling, keep the div and pad as desired, whether the button is displayed or not }}
   <div id="friend-button-status-div">
     {{#if displayAddFriendButton}}
-      <button id="add-friend-button" 
-
-      onclick="addFriend('{{fetchUrl}}')"
-      >
+      <button id="add-friend-button" onclick="addFriend('{{fetchUrl}}')">
         Add friend</button>
 
     {{else if isAFriend}}
@@ -29,4 +26,4 @@
     {{/each}}
   </ul>
 </div>
-<script src="/javascripts/profiles/index.js"></script>
+{{! <script src="/javascripts/profiles/index.js"></script> }}
