comments/posts fixed/ show comments styled tests amended/added

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -586,14 +586,14 @@ body {
 }
 
 .post__options {
-  padding-top: 10px;
+  padding-top: 0px;
+  padding-bottom: 20px;
   border-top: 1px solid lightgray;
   display: flex;
   justify-content: space-evenly;
   font-size: medium;
   color: gray;
   cursor: pointer;
-  padding: 15px;
 }
 
 .post__option {
@@ -624,23 +624,36 @@ body {
   padding-left: 10px;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: 600;
-  
   color: #00B7FF;
 }
 
 .comment__bottom > h4 {
   font-size: small;
   text-decoration: underline;
+  font-weight: bold;
 }
 
 .comment__bottom > p {
   font-size: small;
   color: gray;
   text-decoration: none;
+  font-style: italic;
 }
 
 .hide {
   display: none;
+}
+
+.hide_show {
+  width: 70px;
+  cursor: pointer;
+  border: none;
+  background: transparent;
+}
+
+.hide_show > .material-icons {
+  color: #1877f2;
+  font-size: 30px;
 }
 
 @media (max-width: 768px) {
