--- a/views/comments/index.hbs
+++ b/views/comments/index.hbs
@@ -13,7 +13,11 @@
 
     <div class="post-parent">
       <ul class="post-parent-content">
-        <li class="username">@{{post.user_id.username}}</li>
+        <li
+          class="username post-parent-username"
+          onclick="location.href=`/profiles/{{this.user_id.username}}`"
+          style="cursor:pointer;"
+        >@{{post.user_id.username}}</li>
         <li class="message">{{post.message}}</li>
         <li class="time">{{post.time_posted}}</li>
       </ul>
@@ -21,22 +25,31 @@
 
     <div class="comments">
       {{#each comments}}
-      <div class="comment">
-        <div class="comment-div-container" id="comment-div-container-{{this._id}}">
-          <ul>
-            <li class="username">@{{this.user_id.username}}</li>
-            <li class="message">{{this.message}}</li>
-            <li class="time">{{this.time_posted}}</li>
-          </ul>
-        </div>
+        <div class="comment">
+          <div
+            class="comment-div-container"
+            id="comment-div-container-{{this._id}}"
+          >
+            <ul>
+              <li
+                class="username comment-username"
+                onclick="location.href=`/profiles/{{this.user_id.username}}`"
+                style="cursor:pointer;"
+              >@{{this.user_id.username}}</li>
+              <li class="message">{{this.message}}</li>
+              <li class="time">{{this.time_posted}}</li>
+            </ul>
+          </div>
 
           <div class="comment-likes-container">
             <div
               class="comment-like-counter"
               id="counter-{{this._id}}"
             >{{this.likes.length}}</div>
-            <button class="comment-like-button liked-{{this._doc.likedByCurrentUser}}"
-            id="button-{{this._id}}">
+            <button
+              class="comment-like-button liked-{{this._doc.likedByCurrentUser}}"
+              id="button-{{this._id}}"
+            >
             </button>
 
             <script type="text/javascript">
@@ -47,12 +60,23 @@
               result.counter) })
             </script>
           </div>
-      </div>
+        </div>
       {{/each}}
 
-      <form id="new-comment-form" action="/comments/{{post._id}}" , method="POST">
-        <textarea id="form-comment" type="text" name="message" value="" placeholder="e.g. Hello!"></textarea>
-        <br><input id="submit-comment" type="submit" value="Submit comment">
+      <form
+        id="new-comment-form"
+        action="/comments/{{post._id}}"
+        ,
+        method="POST"
+      >
+        <textarea
+          id="form-comment"
+          type="text"
+          name="message"
+          value=""
+          placeholder="e.g. Hello!"
+        ></textarea>
+        <br /><input id="submit-comment" type="submit" value="Submit comment" />
       </form>
     </div>
   </div>
