fixed tests so all tests enter first names and last names as they are now required

--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -14,10 +14,10 @@
 
     <form id="new-session-form" action="/sessions" method="POST">
       <div class="login-form">
-        <input id="email" type="email" name="email" value="" placeholder="Email" />
+        <input id="email" type="email" name="email" value="" placeholder="Email" required/>
       </div>
       <div class="login-form">
-        <input id="password" type="password" name="password" value="" placeholder="Password" />
+        <input id="password" type="password" name="password" value="" placeholder="Password" required/>
       </div>
 
       <input id="login" type="submit" value="Login" />
