--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -11,6 +11,7 @@
         name="first_name"
         value=""
         placeholder="First name"
+        required
       />
     </div>
 
@@ -21,6 +22,7 @@
         name="last_name"
         value=""
         placeholder="Last name"
+        required
       />
     </div>
 
@@ -31,6 +33,7 @@
         name="username"
         value=""
         placeholder="Username"
+        required
       />
     </div>
 
@@ -41,6 +44,7 @@
         name="email"
         value=""
         placeholder="Email"
+        required
       />
     </div>
 
@@ -51,6 +55,7 @@
         name="password"
         value=""
         placeholder="Password"
+        required
       />
     </div>
 
